tests/baselines/reference/unusedTypeParameterInFunction4.errors.txt
tests/cases/compiler/unusedTypeParameterInFunction4.ts(1,13): error TS6133: 'X' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInFunction4.ts (1 errors) ====
    function f1<X, Y, Z>() {
                ~
!!! error TS6133: 'X' is declared but never used.
        var a: Y;
        var b: Z;
        a;
        b;
    }